--- a/css/styles.css
+++ b/css/styles.css
@@ -200,229 +200,6 @@ button {
 
 /*===========================*/
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(46, 47, 66, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 666;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.modal.is-open {
-  visibility: visible;
-  opacity: 1;
-}
-
-.modal-window {
-  width: 408px;
-  height: 584px;
-  padding: 24px;
-  border-radius: 4px;
-  background: #fcfcfc;
-  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.icon-close-cont {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 24px;
-}
-.icon-close {
-  width: 24px;
-  height: 24px;
-  padding: 7px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-close:hover,
-.icon-close:focus {
-  background-color: #404bbf;
-  fill: #fff;
-}
-
-.form-title {
-  color: #2e2f42;
-  text-align: center;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  margin-bottom: 16px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.form-input-cont {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-bottom: 16px;
-}
-
-.form-label {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  color: #8e8f99;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.48px;
-  height: 58px;
-}
-
-.form-input {
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  height: 40px;
-  padding-left: 34px;
-  font-size: 18px;
-  background: #fcfcfc;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input:focus {
-  outline: none;
-  border: 1px solid #404bbf;
-}
-
-.icon-form {
-  position: absolute;
-  top: 29px;
-  left: 16px;
-  bottom: 11px;
-}
-
-.form-input:focus + .icon-form {
-  fill: #4d5ae5;
-}
-
-.form-label-coment {
-  display: flex;
-  flex-direction: column;
-  color: #8e8f99;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.48px;
-  height: 138px;
-}
-
-.input-comment {
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  background: #fcfcfc;
-  resize: none;
-  height: 120px;
-  padding-top: 8px;
-  padding-left: 16px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input-comment:focus {
-  outline: none;
-  border: 1px solid #404bbf;
-}
-
-.input-comment::placeholder {
-  color: rgba(46, 47, 66, 0.4);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.48px;
-}
-
-.checkbox {
-  display: flex;
-  align-items: center;
-  margin-bottom: 24px;
-}
-
-.checkbox-label {
-  display: flex;
-  gap: 8px;
-  color: #8e8f99;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.48px;
-}
-
-.checkbox-fake {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.checkbox-fake:checked + .checkbox-real svg {
-  display: block;
-}
-
-.checkbox-real {
-  width: 16px;
-  height: 16px;
-  border-radius: 2px;
-  border: 1px solid #2e2f4266;
-}
-
-.checkbox-real svg {
-  display: none;
-}
-
-.icon-checkbox {
-  fill: #404bbf;
-  margin: -1px;
-}
-
-.check-label-span a {
-  color: #4d5ae5;
-  line-height: 1.33;
-  text-decoration-line: underline;
-}
-
-.btn-form {
-  display: block;
-  color: #fff;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.03em;
-  background-color: #4d5ae5;
-  cursor: pointer;
-  padding: 16px 32px;
-  border: 0px;
-  border-radius: 4px;
-  margin: 0 96px 0 95px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-form:hover,
-.btn-form:focus {
-  background-color: #404bbf;
-}
-
-/*===========================*/
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -716,20 +493,24 @@ button {
   fill: #f4f4fd;
 }
 
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
 .form-subscribe {
   display: inline-flex;
   width: 264px;
   height: 40px;
-  padding: 8px 16px;
-  background-color: #2e2f42;
+  padding-left: 16px;
+  background-color: transparent;
   color: #fff;
   font-size: 12px;
   line-height: 2;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.04em;
   border-radius: 4px;
   border: 1px solid #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-right: 24px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .form-subscribe::placeholder {
@@ -746,15 +527,17 @@ button {
 }
 
 .btn-subscribe {
-  display: inline-flex;
+  display: flex;
+  min-width: 165px;
+  height: 40px;
   padding: 8px 24px;
-  gap: 16px;
   justify-content: center;
   align-items: center;
   color: #fff;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
   cursor: pointer;
   border: 0px;
@@ -762,8 +545,226 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icon-subscribe {
+  margin-left: 16px;
+}
+
 .btn-subscribe:hover,
 .btn-subscribe:focus {
+  background-color: #404bbf;
+}
+
+/*===========================*/
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal.is-open {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 408px;
+  min-height: 584px;
+  padding: 72px 24px 24px 24px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover,
+.button-close:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #fff;
+}
+
+.icon-close:hover,
+.icon-close:focus {
+  fill: #fff;
+}
+
+.form-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.form-cont {
+  margin-bottom: 8px;
+}
+
+.form-label {
+  display: block;
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+
+.form-input-cont {
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding-left: 38px;
+  outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.icon-form {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .icon-form {
+  fill: #4d5ae5;
+}
+
+.form-comment-cont {
+  margin-bottom: 16px;
+}
+
+.input-comment {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  resize: none;
+  outline: transparent;
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-comment:focus {
+  border-color: #4d5ae5;
+}
+
+.input-comment::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.48px;
+}
+
+.checkbox {
+  margin-bottom: 24px;
+}
+
+.checkbox-label {
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.checkbox-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid #2e2f4266;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input:checked + .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.policy-link {
+  color: #4d5ae5;
+}
+
+.btn-form {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-form:hover,
+.btn-form:focus {
   background-color: #404bbf;
 }
 
