--- a/css/styles.css
+++ b/css/styles.css
@@ -735,7 +735,7 @@ button {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input:checked + .checkbox-span {
+.visually-hidden:checked + .checkbox-label .checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
